--- a/Web/crawl/templates/error_page/404.html
+++ b/Web/crawl/templates/error_page/404.html
@@ -7,5 +7,6 @@
     uk-height-viewport="offset-bottom: 10">
     </div>
 </div>
+{% load static %}
 <script src="{% static 'js/navbar.bg.js' %}"></script>
 {% endblock %}
