--- a/Web/crawl/templates/error_page/500.html
+++ b/Web/crawl/templates/error_page/500.html
@@ -4,10 +4,11 @@
 {% block mainbody %}
 <div class="uk-background-secondary">
     <div class="center-overlap uk-container uk-background-transparent" uk-scrollspy="cls:uk-animation-fade;">
-        <h1 class="uk-text-center uk-heading-primary uk-light"><span>505 HTTP Version Not Supported</span></h1><hr>
+        <h1 class="uk-text-center uk-heading-primary uk-light"><span>500 Internal Server Error</span></h1><hr>
             <div class="noto uk-text-center">
             </div>
     </div>
 </div>
+{% load static %}
 <script src="{% static 'js/navbar.bg.js' %}"></script>
 {% endblock %}
