--- a/Web/crawl/templates/nav.html
+++ b/Web/crawl/templates/nav.html
@@ -71,7 +71,7 @@
                                 <a href="#" class="noto">Services</a>
                                 <div class="uk-navbar-dropdown uk-navbar-dropdown-width-2">
                                     <ul class="uk-nav uk-text-left uk-navbar-dropdown-nav">
-                                        <li><a href="/wc/" class="noto" style="color: #a1a1a1;">
+                                        <li><a href="/word_cloud/" class="noto" style="color: #a1a1a1;">
                                             <span uk-icon="icon: quote-right;" class="uk-dark uk-margin-small-right">
                                             </span>
                                             詞雲 Word Cloud
