--- a/Web/crawl/templates/Visual/wordcloud.html
+++ b/Web/crawl/templates/Visual/wordcloud.html
@@ -10,7 +10,7 @@
         </legend>
         <div class="uk-grid-divider uk-padding-small" uk-grid>
             <!-- 資料庫 theme 選單 -->
-            <form method="POST" action="/wc/" class="uk-width-1-4">
+            <form method="POST" action="/word_cloud/" class="uk-width-1-4">
                 <div class="uk-margin">
                     {% csrf_token %}
                     <div uk-form-custom="target: > * > span:last-child" class="uk-light uk-margin">
