--- a/Web/crawl/templates/index.html
+++ b/Web/crawl/templates/index.html
@@ -103,7 +103,7 @@
 <!--首頁-->
 <div id="heading" class="" uk-height-viewport="offset-top: true">
     <div id="color_bubble" style="z-index: 1; filter: grayscale(20%); opacity: .6">
-    {% include "index_bg.html" %}
+    {% include "css/index_bg.html" %}
     </div>
 
     <div class="center-overlap uk-container uk-background-transparent uk-animation-fade">
