透過選擇新聞分類，導向分析結果頁面並呈現視覺化

--- a/Web/crawl/templates/Visual/recommendation.html
+++ b/Web/crawl/templates/Visual/recommendation.html
@@ -58,7 +58,7 @@
         {# 這裡放WC #}
         <div class="uk-width-expand">
             <div class="uk-tile uk-background-secondary uk-padding-remove">
-                <img data-src="{{ url }}" class="uk-position--center-center uk-animation-fade" uk-img>
+                <img data-src="{{ wc_url }}" class="uk-position--center-center uk-animation-fade" uk-img>
             </div>
         </div>
 
