--- a/Web/crawl/templates/Visual/bubble.html
+++ b/Web/crawl/templates/Visual/bubble.html
@@ -2,6 +2,7 @@
 
 {% block head_script %}
     <script src="https://d3js.org/d3.v4.min.js" type="text/javascript"></script>
+    <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
 {% endblock %}
 
 {% block stylesheet %}
@@ -16,9 +17,7 @@
             stroke-width: 1px;
         }
 
-        .node--leaf {
-            fill: white;
-        }
+        .node--leaf {fill: #fff;}
 
         .label {
             font: 30px "Noto Sans TC", sans-serif;
