--- a/Web/crawl/templates/index.html
+++ b/Web/crawl/templates/index.html
@@ -135,7 +135,7 @@
                     <div class="noto uk-padding-large uk-text-left uk-margin-auto uk-margin-auto-vertical">
                         <a href="/wc/"><h3 class="noto">詞雲
                         <div class="noto uk-text-small">Word Cloud</div></h3></a>
-                        <p>
+                        <p class="noto-light">
                             透過隱含狄利克雷分佈 (Latent  Dirichlet  Allocation,  LDA)
                             <br>產生給定數目的主題 (詞彙) 集合<br>
                             依據主題中每個詞出現的概率，繪製成詞雲 (Word Cloud)
@@ -177,7 +177,7 @@
                     <div class="noto uk-padding-large uk-text-left uk-margin-auto uk-margin-auto-vertical">
                         <a href="/bar_chart/"><h3 class="noto">直條圖
                         <div class="noto uk-text-small">Bar Chart</div></h3></a>
-                        <p>
+                        <p class="noto-light">
                             透過 LDA 主題中每個詞出現的概率<br>使用 D3.js 動態繪製成直條圖
                         </p>
                     </div>
@@ -195,7 +195,7 @@
                     <div class="noto uk-padding-large uk-text-left uk-margin-auto uk-margin-auto-vertical">
                         <a href="/bubble/"><h3 class="noto">氣泡圖
                         <div class="noto uk-text-small">Grouped Bubble Chart</div></h3></a>
-                        <p>
+                        <p class="noto-light">
                             同一主題之詞彙將集中於同一圓形<br>詞彙概率愈大，則面積愈大<br>
                             透過集合的概念融合 JavaScript 產生能夠與使用者互動之圖表
                         </p>
