加一個氣泡圖按鈕/ jQuery Lazy Loading

--- a/Web/crawl/templates/Visual/bubble.html
+++ b/Web/crawl/templates/Visual/bubble.html
@@ -47,10 +47,13 @@
         </legend>
     </div>
     <svg id="chart" width="960" height="800"></svg>
-    {% include "css/loader.html" %}
-    <div id="loader-wrapper">
-        <div id="loader"></div>
-    </div>
+    <figure id="loader-wrapper">
+        <div class="dot white"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+    </figure>
 </div>
 
 {% load static %}
