--- a/Web/crawl/templates/basic.html
+++ b/Web/crawl/templates/basic.html
@@ -6,8 +6,25 @@
     <meta name="author" content="Li Yen Tseng, J.S.Li, Kevin Shih">
     <meta name="description" content="A capstone project that serves visualized data by crawling & analyzing articles.">
     <title>Crawl Curation</title>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery.lazy/1.7.10/jquery.lazy.min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery.lazy/1.7.10/jquery.lazy.plugins.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.2/js/uikit.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.2/js/uikit-icons.min.js"></script>
+    <script>
+        var loaded = false;
+        function hide_loader() {
+            if (!loaded) { //true
+                $('#loading').fadeOut(1000, function () {//fadeOut後接著在HTML裡面刪除這個div
+                    $(this).remove()
+                });
+                loaded = true
+            }
+        }
+        $(window).load(function () {
+            hide_loader()
+        });
+    </script>
     {% block head_script %}
     {# 必要在head載入的Script #}
     {% endblock %}
@@ -72,7 +89,17 @@
 </head>
 
 <body>
-<div id="bg"></div>
+<div id="bg-img"></div>
+{% include "css/loader.html" %}
+<div id="loading">
+    <figure>
+        <div class="dot white"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+    </figure>
+</div>
 {% include "nav.html"%}
 
 {% block mainbody %}
