--- a/Web/crawl/templates/Visual/recommendation.html
+++ b/Web/crawl/templates/Visual/recommendation.html
@@ -46,12 +46,16 @@
             width: auto;
             height: auto;
         }
+        #rect_bubble:hover {
+            filter: url(#white-glow);
+            opacity: 0.3;
+        }
     </style>
 {% endblock %}
 
 {% block mainbody %}
 {% load static %}
-<div class="uk-section uk-padding uk-preserve-color" uk-height-viewport="offset-top: true" style="background: #404040;">
+<div id="page-content" class="uk-section uk-padding uk-preserve-color" uk-height-viewport="offset-top: true" style="background: #404040;">
     <div class="uk-grid-small uk-padding uk-text-center uk-margin" uk-grid>
 
         {# 長條圖 #}
@@ -78,14 +82,14 @@
                 <div class="uk-width-1-3 uk-grid-item-match noto-light">
                     <div class="uk-tile uk-text-left uk-padding" style="background: #d9d9d9;">
                         <legend class="uk-legend">
-                            Lorem ipsum dolor sit amet
+                            新台幣升值，傳央行匯損逾1.1兆元。
                         </legend>
 
                         <p style="line-height: 32px; font-size: 18px;" class="noto-light">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-
+                            <!--Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.-->
+                            <!--Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.-->
+                            <!--Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.-->
+                            新台幣升值，傳央行匯損逾1.1兆元。（資料照）, 〔即時新聞／綜合報導〕新台幣持續升值，根據彭博統計，台幣對美元去年升值逾7.5%，創30年來最大升幅，審計部報告指央行去年匯兌損失高達1.1563兆元，為2010年以最慘重匯損。, 《聯合報》報導，受到去年台幣升值影響，央行匯損災情慘重，不止匯兌準備金全部用完，還提列遞延損失3052億元，等待未來準備金有進帳時再回沖；不過，央行官員解釋，匯率隨時在變，外幣資產、利益或損失也跟著變化，且目前央行法定公積有8000多億元，持有黃金換算市價也有3000多億未實現利益，財務頗健全。, 報導指出，央行最慘重匯損是發生在2010年，當年因新台幣強升匯損達到1.38兆元，直到2013年才把所有匯損補回還賺了一些。, 新聞送上來！快加入自由電子報APP、LINE好友
                         </p>
                     </div>
                 </div>
@@ -120,9 +124,17 @@
     </div>
 </div>
 
-<svg width="50" height="50" style="position:absolute;top:120%;left:15%;z-index: 10;">
-  <rect x="50" y="20" rx="20" ry="20" width="50" height="50" style="fill:#f0f0f0;opacity:0.5;" />
-</svg>
+<a href="{% url 'bubble' office classification%}">
+    <svg id="rect_bubble" style="opacity:.25; position:absolute; top:90%; left:55%; z-index: 11;" width="100" height="100">
+        <rect rx="20" ry="20" style="fill:#f0f0f0;" x="0" y="0" width="100" height="100"></rect>
+    </svg>
+    <svg style="position:absolute; top:90%; left:55%; z-index: 10;" width="100" height="100">
+        <rect rx="20" ry="20" style="fill:#f0f0f0;opacity:0.8;" x="0" y="0" width="100" height="100"></rect>
+        <svg fill="#999999" class="uk-position-center" height="100" width="100" style="transform: scale(5.0) translate(2px,2px);">
+            <path xmlns="http://www.w3.org/2000/svg" d="M15.989 8.011a.84.84 0 0 1-.856.856c-.485 0-.856-.371-.856-.856s.371-.856.856-.856a.84.84 0 0 1 .856.856zm-2.282 2.853c-1.113 0-1.997.885-1.997 1.997s.885 1.997 1.997 1.997 1.997-.885 1.997-1.997-.885-1.997-1.997-1.997zm-5.736 1.598A3.986 3.986 0 0 1 4.005 16 4.007 4.007 0 0 1 .01 12.005c0-1.141.485-2.168 1.227-2.882C.838 8.268.581 7.297.581 6.299.581 2.847 3.406.022 6.858.022s6.277 2.825 6.277 6.277a6.254 6.254 0 0 1-5.164 6.163zm4.309-6.163c0-2.996-2.425-5.421-5.421-5.421S1.437 3.303 1.437 6.299c0 .827.2 1.598.514 2.283a3.904 3.904 0 0 1 2.054-.571 3.972 3.972 0 0 1 3.966 3.595c2.454-.514 4.309-2.711 4.309-5.307z"></path>
+        </svg>
+    </svg>
+</a>
 
 <a href="#navbar" class="top-button uk-button-small uk-button-primary uk-light" uk-scroll>
     TOP
@@ -132,8 +144,27 @@
 <script>
 var data_discreteBarChart = {{ data|safe }};
 document.getElementById("topic-0").classList.remove("uk-hidden");
+
+(function() {
+    function async_load(){
+        var s = document.createElement('script');
+        s.type = 'text/javascript';
+        s.async = true;
+        s.src = '{% static 'js/barchart.js' %}';
+        var x = document.getElementsByTagName('script')[0];
+        x.parentNode.insertBefore(s, x);
+    }
+    if (window.attachEvent)
+        window.attachEvent('onload', async_load);
+    else
+        window.addEventListener('load', async_load, false);
+})();
+
+$(function($) {
+    $("#page-content").Lazy();
+});
 </script>
 <script type="text/javascript" src="{% static 'js/nv.d3.js' %}"></script>
-<script type="text/javascript" src="{% static 'js/barchart.js' %}"></script>
+<!-- <script type="text/javascript" src="{% static 'js/barchart.js' %}"></script> -->
 <script src="{% static 'js/navbar.bg.js' %}"></script>
 {% endblock %}
